5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1593_2908.log
== TEST (2019-03-22 14:31:42) 
-- CODE:
a = int(input("Variavel a: "))
b = int(input("Variavel b: "))
c = int(input("Variavel c: "))

formula = ((a+b+c)**2)/a+b+c

print(round(formula, 4))
-- OUTPUT:
336.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 14:31:50) 
-- CODE:
a = int(input("Variavel a: "))
b = int(input("Variavel b: "))
c = int(input("Variavel c: "))

formula = ((a+b+c)**2)/a+b+c

print(round(formula, 4))
-- EXECUTION TIME:
0.180954
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
336.25
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
4878.617
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
621.3778
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 14:31:59) 
-- CODE:
a = int(input("Variavel a: "))
b = int(input("Variavel b: "))
c = int(input("Variavel c: "))

formula = ((a+b+c)**2)/a+b+c

print(round(formula, 4)
-- ERROR:
File "XXXX", line 8
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 14:32:06) 
-- CODE:
a = int(input("Variavel a: "))
b = int(input("Variavel b: "))
c = int(input("Variavel c: "))

formula = ((a+b+c)**2)/a+b+c

print(round(formula, 4))
-- OUTPUT:
336.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 14:33:18) 
-- CODE:
a = int(input("Variavel a: "))
b = int(input("Variavel b: "))
c = int(input("Variavel c: "))

formula = ((a**2)+(b**2)+(c**2))/(a+b+c)

print(round(formula, 4))
-- OUTPUT:
25.6667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 14:33:27) 
-- CODE:
a = int(input("Variavel a: "))
b = int(input("Variavel b: "))
c = int(input("Variavel c: "))

formula = ((a**2)+(b**2)+(c**2))/(a+b+c)

print(round(formula, 4))
-- EXECUTION TIME:
0.190996
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.868
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 14:38:20) 
-- CODE:
a = int(input("Variavel a: "))
b = int(input("Variavel b: "))
c = int(input("Variavel c: "))

formula = ((a**2)+(b**2)+(c**2))/(a+b+c)

print(round(formula, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 14:38:38) 
-- CODE:
a = int(input("Variavel a: "))
b = int(input("Variavel b: "))
c = int(input("Variavel c: "))

formula = ((a**2)+(b**2)+(c**2))/(a+b+c)

print(round(formula, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 14:38:46) 
-- CODE:
a = int(input("Variavel a: "))
b = int(input("Variavel b: "))
c = int(input("Variavel c: "))

formula = ((a**2)+(b**2)+(c**2))/(a+b+c)

print(round(formula, 7))
-- EXECUTION TIME:
0.137149
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
